--- a/1_DatasetCharacteristics/exploratory_data_analysis.ipynb
+++ b/1_DatasetCharacteristics/exploratory_data_analysis.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,40 @@
    "source": [
     "## Dataset Overview\n",
     "\n",
-    "[Provide a high-level overview of the dataset. This should include the source of the dataset, the number of samples, the number of features, and example showing the structure of the dataset.]\n"
+    "[Provide a high-level overview of the dataset. This should include the source of the dataset, the number of samples, the number of features, and example showing the structure of the dataset.]\n",
+    "\n",
+    "- Lifecycle of 4,500 Clouds\n",
+    "- Simulated with the Weather Forecast Model ICON\n",
+    "- Located above the Atlantic Ocean during the formation of Hurricane [Paulette](https://zoom.earth/storms/paulette-2020/)\n",
+    "\n",
+    "### Background\n",
+    "A common method in cloud research is the application of cloud-tracking tools to study cloud life cycles and trajectories. The underlying data typically come from satellite imagery or from numerical weather prediction models. Clouds, however, are ephemeral, ever-changing objects, constantly shifting in shape and form. Tracking such transient features is therefore a challenging task.\n",
+    "\n",
+    "The temporal resolution of satellite imagery is limited to a best case of around 5 minutes. Numerical models are not restricted in the same way, but they are limited by the amount of data that can realistically be written and stored. For cloud studies, this temporal resolution becomes a severe bottleneck: short-lived clouds may appear and disappear between the standard model output intervals of 15 to 60 minutes.\n",
+    "\n",
+    "To overcome this limitation, the Leibniz Institute for Tropospheric Research ([TROPOS](https://www.tropos.de)) is developing - within the EU-funded CleanCloud project — the software Targo (Targeted Output). Targo enables cloud tracking in simulations at extremely high temporal resolution of around 30 seconds.\n",
+    "\n",
+    "### Method\n",
+    "Targo is attached as a plugin to the weather forecast model ICON via the CoMIn interface. It requests meteorological fields at every model time step (typically 30–60 seconds) and performs cloud tracking using the community software tobac. At every cloud position, additional meteorological variables are requested, allowing for a comprehensive characterization of each cloud. This approach provides highly resolved cloud data at minimal storage cost.\n",
+    "\n",
+    "### Casestudy\n",
+    "The study object is Hurricane Paulette from September 2020. A hurricane is one of the most extreme meteorological phenomena on our planet. It is characterized by a strong pressure depression (the hurricane eye), surrounded by a ring of convective clouds, intense precipitation, and thunderstorms.\n",
+    "\n",
+    "We applied our new cloud-tracking method to Paulette for a 48-hour period on 7–8 September 2020. From this simulation, we obtained 4,500 tracks of convective clouds. \n",
+    "An example of identified cloud objects and an overfiew or the cloud trajectories can be found in the following figures.\n",
+    "\n",
+    "![Identified Cloud Objects](Cloud_Features.png) ![Cloud Tracks](Tracks.png) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Structure\n",
+    "A cloud may exist in multiple frames (time steps) of the simulation. Coresponding clouds in the frames are linked together to cells. In other words, a cell is a time series of a cloud.\n",
+    "Our dataset consist of these cells.\n",
+    "\n",
+    "Each cell is stored as an indevidual dataframe "
    ]
   },
   {
@@ -169,13 +202,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tobac-aod",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
