add sample data

--- a/1_DatasetCharacteristics/exploratory_data_analysis.ipynb
+++ b/1_DatasetCharacteristics/exploratory_data_analysis.ipynb
@@ -78,7 +78,8 @@
     "\n",
     "Our dataset consists of these cells.\n",
     "\n",
-    "Each cell is stored as an individual dataframe, containing a time axis and a set of cloud-related features."
+    "Each cell is stored as an individual dataframe, containing a time axis and a set of cloud-related features.\n",
+    "A sample of the dataset is included in this repo. "
    ]
   },
   {
@@ -23889,7 +23890,9 @@
     "\n",
     "Rain water (qr) contributes directly to LWP, so high LWP/TQC values accompany high rain rates by definition.\n",
     "\n",
-    "Graupel also shows elevated correlations, consistent with the presence of intense updrafts and vigorous mixed-phase microphysics.\n",
+    "Graupel also shows elevated correlations.\n",
+    "\n",
+    "This is physically consistent because ice-phase processes are essential for efficient precipitation formation.\n",
     "\n",
     "### 3. What controls cloud lifetime?\n",
     "\n",
