correct comment-documentation

--- a/3_Model/model_definition_evaluation_JS.ipynb
+++ b/3_Model/model_definition_evaluation_JS.ipynb
@@ -45,18 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuration\n",
-    "\n",
-    "PAD_VALUE (-99.0):\n",
-    "- Wolken haben unterschiedliche Lebensdauern (120-500+ Zeitschritte)\n",
-    "- Alle Sequenzen werden auf max. Länge gepadded\n",
-    "- PAD_VALUE markiert \"künstliche\" Zeitschritte\n",
-    "- Wird in Loss-Funktion und Metriken ignoriert\n",
-    "\n",
-    "CUTOFF_STEPS:\n",
-    "- Die letzten x Zeitschritte vor dem Wolkenende werden nicht trainiert\n",
-    "- Grund: Dissipations-Phase ist chaotisch und schwer vorherzusagen\n",
-    "- Verhindert, dass Model auf unrealistisches \"exaktes Ende\" optimiert"
+    "### Configuration"
    ]
   },
   {
@@ -255,76 +244,6 @@
     "        if col in df.columns:\n",
     "            data[:, i] = df[col].values\n",
     "    return data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "def extract_ts_features_from_profiles(profiles, threshold=1e-8):\n",
-    "    \"\"\"\n",
-    "    profiles: (T, Z, F) mit F = len(PROFILE_PREFIXES)\n",
-    "    Rückgabe: (T, N_features)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Indizes der Profile\n",
-    "    idx = {name: i for i, name in enumerate(PROFILE_PREFIXES)}\n",
-    "\n",
-    "    qc = profiles[:, :, idx[\"qc_\"]]\n",
-    "    qi = profiles[:, :, idx[\"qi_\"]]\n",
-    "    qr = profiles[:, :, idx[\"qr_\"]]\n",
-    "    w  = profiles[:, :, idx[\"w_\"]]\n",
-    "\n",
-    "    T, Z = qc.shape\n",
-    "    levels = np.arange(Z)\n",
-    "\n",
-    "    ts_features = []\n",
-    "\n",
-    "    for t in range(T):\n",
-    "        qc_t = qc[t]\n",
-    "        qi_t = qi[t]\n",
-    "        qr_t = qr[t]\n",
-    "        w_t  = w[t]\n",
-    "\n",
-    "        cloud_mask = (qc_t + qi_t) > threshold\n",
-    "\n",
-    "        if not np.any(cloud_mask):\n",
-    "            ts_features.append(np.zeros(12, dtype=\"float32\"))\n",
-    "            continue\n",
-    "\n",
-    "        cloud_base = np.max(np.where(cloud_mask))\n",
-    "        cloud_top  = np.min(np.where(cloud_mask))\n",
-    "        cloud_thickness = cloud_base - cloud_top\n",
-    "\n",
-    "        cloud_mass = np.sum(qc_t + qi_t)\n",
-    "        rain_mass  = np.sum(qr_t)\n",
-    "\n",
-    "        w_in_cloud = w_t[cloud_mask]\n",
-    "\n",
-    "        mean_w = np.mean(w_in_cloud)\n",
-    "        max_w  = np.max(w_in_cloud)\n",
-    "\n",
-    "        height_max_qc = np.argmax(qc_t)\n",
-    "        height_max_w  = np.argmax(w_t)\n",
-    "\n",
-    "        center_of_mass = np.sum(levels * (qc_t + qi_t)) / (cloud_mass + 1e-12)\n",
-    "\n",
-    "        ts_features.append([\n",
-    "            cloud_base,\n",
-    "            cloud_top,\n",
-    "            cloud_thickness,\n",
-    "            cloud_mass,\n",
-    "            rain_mass,\n",
-    "            mean_w,\n",
-    "            max_w,\n",
-    "            height_max_qc,\n",
-    "            height_max_w,\n",
-    "            center_of_mass,\n",
-    "            np.max(qc_t),\n",
-    "            np.std(w_in_cloud),\n",
-    "        ])\n",
-    "\n",
-    "    return np.array(ts_features, dtype=\"float32\")\n"
    ]
   },
   {
