--- a/3_Model/model_definition_evaluation_JS.ipynb
+++ b/3_Model/model_definition_evaluation_JS.ipynb
@@ -61,13 +61,16 @@
     "WINDOW_MINUTES =  30 #Minuten\n",
     "CUTOFF_STEPS = 5\n",
     "\n",
+    "MODEL = \"SimpleRNN\"\n",
+    "LOSS = \"MSE\"\n",
+    "\n",
     "BATCH_SIZE = 8\n",
     "EPOCHS = 2 #40"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +78,109 @@
     "# Login HuggingFace\n",
     "# =========================================\n",
     "login(token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN_ID: simple_rnn_2026-02-15_00-39-37_a7afa260af\n",
+      "[HF] uploaded: runs/simple_rnn_2026-02-15_00-39-37_a7afa260af/setup.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Du kannst hier ein separates Repo für Logs/Configs nutzen (empfohlen),\n",
+    "# oder du lässt es auf dem Dataset-Repo laufen.\n",
+    "CONFIG_REPO_ID = REPO_ID  # z.B. \"thorsten789/hurricane_cloud_runs\"\n",
+    "\n",
+    "def make_run_id(prefix: str, config: dict) -> str:\n",
+    "    ts = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "    cfg_str = json.dumps(config, sort_keys=True)\n",
+    "    h = hashlib.sha1(cfg_str.encode(\"utf-8\")).hexdigest()[:10]\n",
+    "    return f\"{prefix}_{ts}_{h}\"\n",
+    "\n",
+    "def save_json_local(path: str, data: dict) -> str:\n",
+    "    os.makedirs(os.path.dirname(path), exist_ok=True)\n",
+    "    with open(path, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(data, f, indent=2, ensure_ascii=False)\n",
+    "    return path\n",
+    "\n",
+    "def upload_json_hf(local_path: str, run_id: str, name: str, base_dir: str = \"runs\"):\n",
+    "    \"\"\"Lädt JSON als {base_dir}/{run_id}/{name}.json in CONFIG_REPO_ID hoch.\"\"\"\n",
+    "    try:\n",
+    "        path_in_repo = f\"{base_dir}/{run_id}/{name}.json\"\n",
+    "        upload_file(\n",
+    "            path_or_fileobj=local_path,\n",
+    "            path_in_repo=path_in_repo,\n",
+    "            repo_id=CONFIG_REPO_ID,\n",
+    "            repo_type=\"dataset\",\n",
+    "            commit_message=f\"Add {name}.json for {run_id}\",\n",
+    "        )\n",
+    "        print(f\"[HF] uploaded: {path_in_repo}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"[HF] upload skipped/failed ({name}): {e}\")\n",
+    "\n",
+    "# --- zentrale Run-Config (die ID basiert auf config -> sinnvoller Run-Name)\n",
+    "RUN_CONFIG = {\n",
+    "    \"model\": MODEL,\n",
+    "    \"optimizer\": \"adam\",\n",
+    "    \"units1\": 64,\n",
+    "    \"units2\": 32,\n",
+    "    \"lr\": 1e-3,\n",
+    "    \"batch_size\": BATCH_SIZE,\n",
+    "    \"epochs\": EPOCHS,\n",
+    "    \"cutoff_steps\": CUTOFF_STEPS,\n",
+    "    \"loss\": LOSS,\n",
+    "}\n",
+    "\n",
+    "RUN_ID = make_run_id(\"simple_rnn\", RUN_CONFIG)\n",
+    "print(\"RUN_ID:\", RUN_ID)\n",
+    "\n",
+    "# Setup sofort speichern (damit du schon am Anfang einen Run hast)\n",
+    "setup = {\n",
+    "    \"run_id\": RUN_ID,\n",
+    "    \"config\": RUN_CONFIG,\n",
+    "    \"data\": {\"repo_id\": REPO_ID},\n",
+    "    \"meta\": {\"notebook\": \"3_Model/model_definition_evaluation_JS.ipynb\"},\n",
+    "}\n",
+    "\n",
+    "# +++ Logging: Save Setup +++\n",
+    "local_setup = save_json_local(f\"runs_local/{RUN_ID}/setup.json\", setup)\n",
+    "upload_json_hf(local_setup, RUN_ID, \"setup\")\n",
+    "\n",
+    "class AutoSaveTrain(tf.keras.callbacks.Callback):\n",
+    "    \"\"\"Speichert train.json am Ende von model.fit (History + best_val_loss).\"\"\"\n",
+    "    def __init__(self, run_id: str):\n",
+    "        super().__init__()\n",
+    "        self.run_id = run_id\n",
+    "\n",
+    "    def on_train_end(self, logs=None):\n",
+    "        hist = getattr(self.model, \"history\", None)\n",
+    "        history_dict = hist.history if hist is not None else {}\n",
+    "\n",
+    "        train_data = {\n",
+    "            \"run_id\": self.run_id,\n",
+    "            \"history\": history_dict,\n",
+    "            \"summary\": {\n",
+    "                \"best_val_loss\": float(min(history_dict[\"val_loss\"])) if \"val_loss\" in history_dict else None,\n",
+    "                \"final_train_loss\": float(history_dict[\"loss\"][-1]) if \"loss\" in history_dict and len(history_dict[\"loss\"]) else None,\n",
+    "            },\n",
+    "        }\n",
+    "        local_train = save_json_local(f\"runs_local/{self.run_id}/train.json\", train_data)\n",
+    "        upload_json_hf(local_train, self.run_id, \"train\")\n"
    ]
   },
   {
